--- a/hotelproject.html
+++ b/hotelproject.html
@@ -10,11 +10,12 @@
       <p id = "fullroom"></p>
       <input type = "text" id = "checkin" placeholder = "input name ... ">
       <button onclick = "checkIn()">check in</button>
+      <ol>
+      </ol>
       <input type = "number" id  = "checkout" placeholder = "check out by your #...">
       <button onclick = "checkOut()">check out</button>
       <button onclick = "clearAll()">clear room</button>
-      <ol>
-      </ol>
+      <button onclick = "lockRoom()">lock room</button>
       </div>
     </div>
       
