--- a/hotelprojecttest.html
+++ b/hotelprojecttest.html
@@ -4,6 +4,11 @@
     <link rel = "stylesheet" href="hotelproject.css">
   </head>
   <body>
+    <div>
+      <center><img src = "logohotel.png" id = "logo"></center>
+      <img src = "hotelbackground.jpg" id = "background">
+    </div>
+      
     <div class = "mydiv">
       <div id = "room1" class = "room">
       <p id = "fullroom"></p>
